<resources>
    <string name="app_name">MyTest</string>

    <!--Main menu -->
    <string name="action_search">Search</string>

    <!--Drawer-->
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>

    <!--Drawer Menus-->
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>

    <!--Main-->
    <string name="tests">Tests</string>
    <string name="results">Results</string>
    
    <!--Hint-->
    <string name="ether_quest">Enter the question name</string>
    <string name="ether_answer">Enter the answer</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="login">Log in</string>
    <string name="login_activity">Hello</string>
    <string name="about_user">About</string>
    <string name="edit_about">Edit about</string>
    <string name="add_review">Add review</string>
    <string name="search">Search</string>
    <string name="some_error">Some Error Occured!</string>
    <string name="tasks">Tasks</string>
    <string name="task_name">Task name</string>
    <string name="enter_task_name">Enter the task name</string>
    <string name="enter_task_subject">Enter the task subject</string>
    <string name="enter_task_text">Enter the task text</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="new_task">New Task</string>

</resources>
